--- a/welcome.html
+++ b/welcome.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find Your Way</title>
-    <link rel="stylesheet" href="welcome.css">
-</head>
-<body>
+    <link rel="stylesheet" href="welcome.css" />
+  </head>
+  <body>
     <header>
-        <h1>WELCOME</h1>
-        <p>Where do you want to go?</P>
+      <h1>WELCOME</h1>
+      <h3>Where do you want to go?</h3>
     </header>
     <div class="card-container">
-        <div class="card">
-            <h2>Classrooms</h2>
-            <p>Explore our Classrooms</p>
-        </div>
-        <div class="card">
-            <h2>Classrooms</h2>
-            <p>Explore our Classrooms</p>
-        </div>
-        <div class="card">
-            <h2>Classrooms</h2>
-            <p>Explore our Classrooms</p>
-        </div>
-        <div class="card">
-            <h2>Classrooms</h2>
-            <p>Explore our Classrooms</p>
-        </div>
-        <div class="card">
-            <h2>Classrooms</h2>
-            <p>Explore our Classrooms</p>
-        </div>
-        <div class="card">
-            <h2>Classrooms</h2>
-            <p>Explore our Classrooms</p>
-        </div>
+      <div class="card">
+        <h2>Classrooms</h2>
+        <p>Explore our Classrooms</p>
+      </div>
+      <div class="card">
+        <h2>WC</h2>
+        <p>Toilets</p>
+      </div>
+      <div class="card">
+        <h2>Workspace</h2>
+        <p>Find a place to work and chill</p>
+      </div>
+      <div class="card">
+        <h2>Canteen</h2>
+        <p>Come and get some delicious food</p>
+      </div>
+      <div class="card">
+        <h2>Library</h2>
+        <p>Explore the books</p>
+      </div>
+      <div class="card">
+        <h2>Office</h2>
+        <p>We are here to help</p>
+      </div>
     </div>
-    
-</body>
+    <!-- <footer>
+        <img> 
+    </footer> -->
+  </body>
 </html>
