Added logo and some more css

--- a/welcome.html
+++ b/welcome.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Find Your Way</title>
     <link rel="stylesheet" href="welcome.css" />
+    <link rel="stylesheet" href=
+"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Comfortaa:wght@300&family=Inconsolata:wght@200&family=Paytone+One&family=Poppins:wght@200&display=swap" rel="stylesheet">
+</link>
   </head>
   <body>
     <header>
@@ -13,32 +19,32 @@
     </header>
     <div class="card-container">
       <div class="card">
-        <h2>Classrooms</h2>
+        <i class="fa-solid fa-graduation-cap icons"></i>
         <p>Explore our Classrooms</p>
       </div>
       <div class="card">
-        <h2>WC</h2>
+        <i class="fa-solid fa-restroom icons"></i>
         <p>Toilets</p>
       </div>
       <div class="card">
-        <h2>Workspace</h2>
+        <i class="fa-solid fa-briefcase icons"></i>
         <p>Find a place to work and chill</p>
       </div>
       <div class="card">
-        <h2>Canteen</h2>
+        <i class="fa-solid fa-utensils icons"></i>
         <p>Come and get some delicious food</p>
       </div>
       <div class="card">
-        <h2>Library</h2>
+        <i class="fa-solid fa-book-bookmark icons"></i>
         <p>Explore the books</p>
       </div>
       <div class="card">
-        <h2>Office</h2>
+        <i class="fa-solid fa-info icons"></i>
         <p>We are here to help</p>
       </div>
     </div>
-    <!-- <footer>
-        <img> 
-    </footer> -->
+    <footer>
+        <img src="./images/Logo.png"> 
+    </footer>
   </body>
 </html>
